--- a/brightlights/style/style.css
+++ b/brightlights/style/style.css
@@ -16,6 +16,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  display: none;
   height: 30px;
   width: 20px;
   color: #1c1b21;
@@ -38,8 +39,8 @@
   line-height: 25px;
   color: #000;
   position: absolute;
-  -webkit-transform: rotate(270deg) translateY(-1%);
-          transform: rotate(270deg) translateY(-1%);
+  -webkit-transform: rotate(270deg) translateY(-5%);
+          transform: rotate(270deg) translateY(-5%);
 }
 .scrollup:hover {
   background-color: #7a66cc;
